set(SOURCES ../test_sets.cpp)
copy_bench_file("rungraphs")

set(STRUCT_DIR ${PROJECT_SOURCE_DIR}/include/structures)
set(VERLIB_BENCH "btree" "list" "dlist" "hash_block" "arttree")
set(VERLIB_BENCH_EXTRA "leaftree" "blockleaftree")
set(VERLIB_BENCH_USE_CAS "hash_block")
set(VERLIB_BENCH_RECORDED_ONCE "btree" "list")

set(COMMON_DEFS "")

function(add_benchmark NAME STRUCT_NAME DEFS)
  add_executable(${NAME} ${SOURCES})
  target_compile_definitions(${NAME} PRIVATE ${COMMON_DEFS})
  target_compile_definitions(${NAME} PRIVATE ${DEFS})
  target_link_libraries(${NAME} PRIVATE verlib)
  target_include_directories(${NAME} PRIVATE ${STRUCT_NAME})
endfunction()

foreach(bench ${VERLIB_BENCH_RECORDED_ONCE})
  add_benchmark(${bench}_lck_reconce_ls ${STRUCT_DIR}/${bench} "Versioned;Recorded_Once;LazyStamp")
  add_benchmark(${bench}_lf_reconce_ls ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;Recorded_Once;LazyStamp")
  add_benchmark(${bench}_lf_reconce_hs ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;Recorded_Once;HWWriteStamp")
  add_benchmark(${bench}_lf_reconce_ls_ss ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;Recorded_Once;LazyStamp;SlowStore")
endforeach()

foreach(bench ${VERLIB_BENCH})
  add_benchmark(${bench}_lck_noversion ${STRUCT_DIR}/${bench} "")
  add_benchmark(${bench}_lck_versioned_ls ${STRUCT_DIR}/${bench} "Versioned;LazyStamp")
  add_benchmark(${bench}_lck_versioned_hs ${STRUCT_DIR}/${bench} "Versioned;HWWriteStamp")
  add_benchmark(${bench}_lf_noversion ${STRUCT_DIR}/${bench} "FlockHelp")
  add_benchmark(${bench}_lf_indirect_ls ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;FullyIndirect;LazyStamp")

  add_benchmark(${bench}_lck_gen_snapshot_rs ${STRUCT_DIR}/${bench} "Versioned;GenSnapshot;ReadStamp")
  add_benchmark(${bench}_lck_indirect_rs ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;ReadStamp")

  add_benchmark(${bench}_lf_noshortcut_ls ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;NoShortcut;LazyStamp")
  add_benchmark(${bench}_lf_indirect_hs ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;FullyIndirect;HWWriteStamp")
  add_benchmark(${bench}_lf_noshortcut_hs ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;NoShortcut;HWWriteStamp")
  add_benchmark(${bench}_lf_versioned_hs ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;HWWriteStamp")
  add_benchmark(${bench}_lf_versioned_ls ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;LazyStamp")
  add_benchmark(${bench}_lf_versioned_tl2s ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;TL2Stamp;LazyStamp")
  add_benchmark(${bench}_lf_versioned_rs ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;ReadStamp")
  add_benchmark(${bench}_lf_versioned_ws ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;WriteStamp")
  add_benchmark(${bench}_lf_versioned_ns ${STRUCT_DIR}/${bench} "FlockHelp;Versioned;NoIncStamp")
endforeach()

foreach(bench ${VERLIB_BENCH_USE_CAS})
  add_benchmark(${bench}_cas_noversion ${STRUCT_DIR}/${bench} "UseCAS")
  add_benchmark(${bench}_cas_indirect_ls ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;LazyStamp;UseCAS")
  add_benchmark(${bench}_cas_noshortcut_ls ${STRUCT_DIR}/${bench} "Versioned;NoShortcut;LazyStamp;UseCAS")
  add_benchmark(${bench}_cas_indirect_hs ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;HWWriteStamp;UseCAS")
  add_benchmark(${bench}_cas_noshortcut_hs ${STRUCT_DIR}/${bench} "Versioned;NoShortcut;HWWriteStamp;UseCAS")
  add_benchmark(${bench}_cas_versioned_hs ${STRUCT_DIR}/${bench} "Versioned;HWWriteStamp;UseCAS")
  add_benchmark(${bench}_cas_versioned_ls ${STRUCT_DIR}/${bench} "Versioned;LazyStamp;UseCAS")
  add_benchmark(${bench}_cas_versioned_tl2s ${STRUCT_DIR}/${bench} "Versioned;TL2Stamp;LazyStamp;UseCAS")
  add_benchmark(${bench}_cas_versioned_rs ${STRUCT_DIR}/${bench} "Versioned;ReadStamp;UseCAS")
  add_benchmark(${bench}_cas_versioned_ws ${STRUCT_DIR}/${bench} "Versioned;WriteStamp;UseCAS")
  add_benchmark(${bench}_cas_versioned_ns ${STRUCT_DIR}/${bench} "Versioned;NoIncStamp;UseCAS")
endforeach()

